overflow hidden on main when max width 500px to avoid horizontal scroll

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -11,5 +11,9 @@
 		display: flex;
 		flex-direction: column;
 		gap: 4rem;
+
+		@media screen and (max-width: 500px) {
+			overflow-x: hidden;
+		}
 	}
 }
